# FractalRendererCpp

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
ColoringSchemes/include/ColoringSchemes/: Blue.h  Classic.h  Greyscale.h  Linear.h  Rainbow.h
Examples/: CMakeLists.txt  JuliaViewer.cpp  MandelbrotViewer.cpp
Fractals/include/: BurningShip.h  Mandelbrot.h
Fractals/include/Fractals/: BurningShip.h  Julia.h  Mandelbrot.h
MandelbrotViewer/: CMakeLists.txt  ColoringBlue.h  ColoringInterface.h  MandelbrotViewer.cpp  MandelbrotViewer.h
Renderer/: CMakeLists.txt
Renderer/include/Renderer/: ColoringInterface.h  FractalInterface.h  InputCallbacks.h  Inputs.h  Renderer.h  UserInputs.h
Renderer/src/: CMakeLists.txt  Renderer.cpp
